# hblog

./: .gitignore  DESIGN  DESIGN-CODE  DESIGN-SITE  Dockerfile  Makefile  NOTES  README.md  container_run_init.sh  docker_run_init.sh  hbgwdiff.sh  hblog.cabal  munge_files.sh  package-minimal.yaml  package.yaml  posts  run_build.sh  run_build_internal.sh  run_container.sh  run_cron.sh  run_docker.bat  run_docker.sh  run_hoogle_server.sh  run_tests.sh  run_tests_coverage.sh  setup_links.sh  site.hs  stack-minimal.yaml  stack.yaml  stop_container.sh  stop_docker.bat  stop_docker.sh  sync.yaml  teardown_links.sh  volume_setup.bat  volume_setup.sh  volume_teardown.bat
app/: hblog.hs  rectifier.hs  tiki_to_md.hs  unphone.hs
css/: career.css  default.css
lib/HBlog/: HBlog.hs  Lib.hs  Rectifier.hs  Spec.hs  TikiToMD.hs  UnPhone.hs
lib/Text/Pandoc/Readers/: TikiWiki.hs
posts/: README-CRAP  README-CRAP.md
posts/computing/: how_wifi_actually_works.md  syntax_allergy.md
posts/computing/programming/: vim_workflow.md
posts/personal/: my_views_on_the_future.md  transhuman_fiction.md
posts/personal/writing/: story_ideas.md
src/: Lib.hs  hblog.hs  tiki_to_md.hs
templates/: default.html  post.html  redirects
test/: Spec.hs
tests/hblog/001_basic_linking/: config.yaml
tests/hblog/001_basic_linking/posts/bar/: 001.md
tests/hblog/001_basic_linking/posts/foo/: my_views_on_the_future.md
tests/hblog/001_basic_linking/wanted/: archive.html
tests/hblog/001_basic_linking/wanted/bar/: 001.html  archive.html
tests/hblog/001_basic_linking/wanted/categories/: bar.html  foo.html
tests/hblog/001_basic_linking/wanted/foo/: archive.html  my_views_on_the_future.html
tests/hblog/001_basic_linking/wanted/tags/: bar.html  bar:meta.html  foo.html  foo:futurism+psychology+transhumanism.html  foo:futurism+psychology.html  foo:futurism+transhumanism.html  foo:futurism.html  foo:psychology+transhumanism.html  foo:psychology.html  foo:transhumanism.html  futurism+psychology+transhumanism.html  futurism+psychology.html  futurism+transhumanism.html  futurism.html  meta.html  psychology+transhumanism.html  psychology.html  transhumanism.html
tests/hblog/002_check_for_extensions/: config.yaml  templates
tests/hblog/002_check_for_extensions/posts/foo/: my_views_on_the_future.md
tests/hblog/002_check_for_extensions/wanted/: archive.html
tests/hblog/002_check_for_extensions/wanted/categories/: foo.html
tests/hblog/002_check_for_extensions/wanted/foo/: archive.html  my_views_on_the_future.html
tests/hblog/002_check_for_extensions/wanted/tags/: foo.html  foo:futurism+psychology+transhumanism.html  foo:futurism+psychology.html  foo:futurism+transhumanism.html  foo:futurism.html  foo:psychology+transhumanism.html  foo:psychology.html  foo:transhumanism.html  futurism+psychology+transhumanism.html  futurism+psychology.html  futurism+transhumanism.html  futurism.html  psychology+transhumanism.html  psychology.html  transhumanism.html
tests/hblog/003_bigger_test/: config.yaml  templates
tests/hblog/003_bigger_test/wanted/: archive.html
tests/hblog/004_git_fail/: config.yaml
tests/hblog/005_bigger_link_test/: config.yaml
tests/hblog/005_bigger_link_test/wanted/: 001.html
tests/hblog/005_git_dates/: config.yaml
tests/hblog/005_git_dates/wanted/: archive.html
tests/hblog/006_override_dates/: config.yaml
tests/hblog/006_override_dates/wanted/: archive.html
tests/hblog/007_bad_fields/: config.yaml
tests/hblog/008_no_title/: config.yaml
tests/hblog/009_more_file_types/: config.yaml  hblog.tix
tests/hblog/009_more_file_types/css/: computing.css  default.css
tests/hblog/009_more_file_types/posts/: index.md
tests/hblog/009_more_file_types/templates/: post-list.html  post.html
tests/hblog/009_more_file_types/wanted/: archive.html  index.html
tests/munge_files/001_basics/: config.yaml
tests/munge_files/001_basics/wanted/: git_log
tests/rectifier/001_wiki_link_exact/: config.yaml
tests/rectifier/002_wiki_link_inexact_1/: config.yaml
tests/rectifier/005_wiki_link_internal/: config.yaml
tests/rectifier/006_wiki_link_internal_conflict/: config.yaml
tests/rectifier/007_other_doc_with_fragment_exact/: config.yaml
tests/rectifier/008_ignores_url/: config.yaml
tests/rectifier/009_ignores_uri/: config.yaml
tests/rectifier/010_filename_link_exact/: config.yaml
tests/rectifier/011_filename_with_md_link_exact/: config.yaml
tests/rectifier/012_filename_link_inexact/: config.yaml
tests/rectifier/013_other_doc_with_fragment_inexact/: config.yaml
tests/rectifier/014_wiki_link_exact_duplicates/: config.yaml
tests/rectifier/015_fails_no_match/: config.yaml
tests/tiki_to_md/001_general_test_1/: config.yaml
tests/tiki_to_md/001_general_test_1/in/: my_views_on_the_future.tiki
tests/tiki_to_md/001_general_test_1/wanted/: my_views_on_the_future.html  my_views_on_the_future.md
tests/tiki_to_md/002_general_test_2/: config.yaml
tests/tiki_to_md/002_general_test_2/wanted/: transhuman_fiction.html  transhuman_fiction.md
tests/tiki_to_md/003_artificial_test/: config.yaml
tests/tiki_to_md/003_artificial_test/in/: test_lots.tiki
tests/tiki_to_md/003_artificial_test/wanted/: test_lots.html  test_lots.md
tests/tiki_to_md/004_tc_test/: config.yaml
tests/tiki_to_md/004_tc_test/in/: transhuman_fiction.tiki
tests/unphone/001_absolute_link/: config.yaml
tests/unphone/001_absolute_link/in/: 001.md
tests/unphone/001_absolute_link/wanted/: 001.md
tests/unphone/002_absolute_link_desc/: config.yaml
tests/unphone/002_absolute_link_desc/in/: 001.md
tests/unphone/003_link_bad_case/: config.yaml
tests/unphone/003_link_bad_case/in/: 001.md
tests/unphone/003_link_bad_case/wanted/: 001.md
tests/unphone/004_wiki_link_desc/: config.yaml
tests/unphone/004_wiki_link_desc/in/: 001.md
tests/unphone/004_wiki_link_desc/wanted/: 001.md
tests/unphone/005_problem_link/: config.yaml
tests/unphone/005_problem_link/in/: the_great_transformation.md
tests/unphone/005_problem_link/wanted/: the_great_transformation.md
tosort/: lnc_emails.txt  palm_writings.tgz
(+235 files in other folders)
