name:                hblog
version:             0.1.0.0
synopsis:            RLP's hakyll blog
description:         Please see README.md
homepage:            https://github.com/rlpowell/hblog
license:             MIT
license-file:        LICENSE
author:              Robin Lee Powell
maintainer:          rlpowell@digitalkingdom.org
copyright:           2016 Robin Lee Powell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     HBlog.Lib
  build-depends:       base >= 4.7 && < 5
                     , pcre-light
                     , pcre-heavy
                     , template-haskell
  default-language:    Haskell2010

executable hblog
  main-is:          hblog.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pcre-heavy
                  , filepath
                  , unix
                  , blaze-html
                  , containers
                  , string-conversions
  ghc-options:      -threaded -Wall
  -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

executable tiki_to_md
  main-is:          tiki_to_md.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pcre-heavy
                  , filepath
                  , unix
                  , blaze-html
                  , containers
  ghc-options:      -threaded -Wall
  -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

executable unphone
  main-is:          unphone.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , unix
                  , pcre-heavy
                  , pcre-light
                  , filemanip
                  , hblog
  ghc-options:      -threaded -Wall
  -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

executable rectifier
  main-is:          rectifier.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , unix
                  , filemanip
  ghc-options:      -threaded -Wall
  -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

-- executable helloworld-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   build-depends:       base
--                      , helloworld
--   default-language:    Haskell2010
-- 
test-suite hblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , process
                     , directory
                     , transformers
                     , yaml
                     , filepath
                     -- , hspec-core
                     -- , hspec-meta
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rlpowell/hblog
