name:                hblog
version:             0.1.0.0
synopsis:            RLP's hakyll blog
description:         Please see README.md
homepage:            https://github.com/rlpowell/hblog
license:             MIT
license-file:        LICENSE
author:              Robin Lee Powell
maintainer:          rlpowell@digitalkingdom.org
copyright:           2016 Robin Lee Powell
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     HBlog.Lib
                     , HBlog.HBlog
                     , HBlog.Rectifier
                     , HBlog.Spec
                     , HBlog.TikiToMD
                     , HBlog.UnPhone
  build-depends:       base >= 4.7 && < 5
                     -- HBlog.Lib
                     , pcre-light
                     , pcre-heavy
                     , template-haskell
                     , pandoc
                     , pandoc-types
                     , parsec
                     , network-uri
                     , containers
                     , texmath
                     , tagsoup
                     , mtl
                     , data-default
                     , system-fileio
                     , MissingH
                     -- HBlog.HBlog
                     , hakyll == 4.9.*
                     , pcre-heavy
                     , filepath
                     , unix
                     , blaze-html
                     , containers
                     , string-conversions
                     , pandoc-types
                     , network-uri
                     , pandoc
                     , directory
                     , time
                     , process
                     , transformers
                     , time-locale-compat
                     , text
                     -- HBlog.Rectifier
                     , filemanip
                     , bytestring
                     , edit-distance
                     -- lib/HBLog/Spec.hs
                     , hspec
                     , QuickCheck
                     , process
                     , directory
                     , transformers
                     , yaml
                     , filepath
                     , unix
                     -- HBlog.TikiToMD
                     , filepath
                     , pandoc
                     , pandoc-types
                     , filemanip
                     , directory
                     , text
                     -- HBlog.UnPhone
                     , directory
                     , filepath
                     , unix
                     , pcre-heavy
                     , pcre-light
                     , filemanip
  ghc-options:      -Wall
  default-language:    Haskell2010

executable hblog
  main-is:          hblog.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hblog
  ghc-options:      -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable tiki_to_md
  main-is:          tiki_to_md.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hblog
  ghc-options:      -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable unphone
  main-is:          unphone.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hblog
  ghc-options:      -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable rectifier
  main-is:          rectifier.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hblog
  ghc-options:      -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite hblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hblog
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rlpowell/hblog
